# AI_Agent2

./: README.md
HR_Assistant/: ANL_104.txt  DEV_102.txt  DS_105.txt  Dockerfile  HR_103.txt  HR_Assistant.ipynb  README.md  requirements.txt
developer-tools-research-agent/: Dockerfile  README.md  main.py  pyproject.toml
developer-tools-research-agent/src/: firecrawl.py  models.py  workflow.py
pandas_df_agent/: .gitignore  Dockerfile  README.md  pandas_dataframe_agents.ipynb  requirements.txt
research-agent/: Dockerfile  README.md  main.py  pyproject.toml
