[project]
name = "simple-agent"
version = "0.1.0"
description = "web crawling"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "langchain>=0.1.14",
  "langchain-community>=0.0.21",
  "langchain-mcp-adapters>=0.1.7",
  "langchain-openai>=0.3.23",
  "langgraph>=0.4.8",
  "python-dotenv>=1.1.0",
  "mcp>=1.9.4",
  "fastapi>=0.115.13",
  "uvicorn>=0.15.0",
]


